tests/errors/comprehensive/E5005_integer_overflow_add.ez
/*
 * Error Test: E5005 - integer-overflow (addition)
 * Expected: "integer overflow"
 */

do main() {
    temp max int = 9223372036854775807  // max int64
    temp result int = max + 1  // Overflow
}
